--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
     <div id="app">
-        <section>
+        <section v-show="inProgressAssignments.length">
             <h1>In progress assignments</h1>
             
             <ul>
                 <li 
-                    v-for="assignment in assignments.filter(a => !a.complete)" 
+                    v-for="assignment in inProgressAssignments" 
                     :key="assignment.id" 
                 >
                     <label>
@@ -35,12 +35,12 @@
 
         </section>
 
-        <section>
+        <section v-show="completedAssignments.length">
             <h1>Completed assignments</h1>
 
             <ul>
                 <li 
-                    v-for="assignment in assignments.filter(a => a.complete)" 
+                    v-for="assignment in completedAssignments" 
                     :key="assignment.id" 
                 >
                     <label>
@@ -66,6 +66,10 @@
                         {id:3, name: 'teste 3', complete: false},
                     ]
                 }
+            },
+            computed: {
+                completedAssignments(){ return this.assignments.filter(a => a.complete)},
+                inProgressAssignments(){ return this.assignments.filter(a => !a.complete)},
             }
         }
 
